Made words fixed width with overflow-x

--- a/src/css/Word.css
+++ b/src/css/Word.css
@@ -1,5 +1,6 @@
 .word {
   position: absolute;
+  max-height:20rem;
   margin:2rem;
   padding:0.5rem;
   border-radius: 5px;
@@ -8,6 +9,8 @@
   background-color:#E7ECEF;
   box-shadow:0 2px 4px 0 rgba(0,0,0,0.16);
   cursor:pointer;
+  overflow-y:scroll;
+  overflow-x:hidden;
 }
 .word--editable {
   z-index:100;
@@ -18,6 +21,7 @@
   /* Inflection */
   .word__inflection {
     width:100%;
+    height:2em;
     padding:0.5em 0.5em;
     border:none;
     border-radius:4px;
